# leadtime

./: .bandit  .gitignore  Makefile  README.md  azure_http.py  config.py  example.env  main.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in
.github/workflows/: bandit.yml
azure_devops/: __init__.py  ado_services.py  api_client.py  project_service.py  release_definition_service.py  release_service.py
azure_devops/models/: __init__.py  schemas.py
scripts/: lock.sh
tests/: conftest.py  factories.py  test_ado_services.py  test_api_client.py  test_azure_http.py  test_main.py
